# Trabalho-Individual-2023-1

./: Dockerfile.app  README.md  pyproject.toml
.github/workflows/: ci.yml
CoCa_pytorch/: Dockerfile  Dockerfile.app  README.md  connect-database.py  database.sql  docker-compose.yml  pyproject.toml  python-publish.yaml  requirements.txt
CoCa_pytorch/_build/: .buildinfo  genindex.html  index.html  search.html
CoCa_pytorch/_build/.doctrees/: environment.pickle
CoCa_pytorch/app/: Dockerfile  __init__.py
CoCa_pytorch/coca_pytorch/: Dockerfile  requirements.txt
CoCa_pytorch/db/: README.md
CoCa_pytorch/source/: conf.py
CoCa_pytorch/src/: README.md
