[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "CoCa-pytorch"
version = "0.0.7"
description = "CoCa, Contrastive Captioners are Image-Text Foundation Models - Pytorch"

license = "MIT"

authors = ["Phil Wang <lucidrains@gmail.com>"]

repository = "https://github.com/lucidrains/CoCa-pytorch"
readme = "README.md"
packages = [{include = "coca_pytorch"}]

keywords = [
    "artificial intelligence",
    "deep learning",
    "transformers",
    "attention mechanism",
    "contrastive learning",
    "multimodal"
    ]

[tool.poetry.dependencies]
python = "^3.7"
pytest = "7.2.0"
pytest-cov = "4.0.0"
einops = "0.6"
torch = "2.0.1"
torchvision = "0.15.2"
vit-pytorch = "0.40.2"

[[tool.poetry.source]]
name = "coca"
url = "https://github.com/AnHoff/Trabalho-Individual-2023-1/"
